# pc86

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cpu.c  cpu.h  log.h  main.c
src/cpu/: bios.c  bios.h  cpu.h  registers.h  types.h
src/utils/: log.c  log.h
